Updated to Open Cart

--- a/opencart_cucumber_framework/src/test/resources/config.properties
+++ b/opencart_cucumber_framework/src/test/resources/config.properties
@@ -12,7 +12,8 @@ os=windows
 
 #appURL=https://tutorialsninja.com/demo/
 #appURL=http://localhost/opencart/upload/
-appURL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+#appURL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+appURL=https://demo.opencart.com/index.php?route=common/home&language=en-gb
 
 email=Admin
 password=admin123
