Added Forgot Password cases

--- a/opencart_cucumber_framework/src/test/resources/config.properties
+++ b/opencart_cucumber_framework/src/test/resources/config.properties
@@ -12,8 +12,7 @@ os=windows
 
 #appURL=https://tutorialsninja.com/demo/
 #appURL=http://localhost/opencart/upload/
-#appURL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-appURL=https://demo.opencart.com/index.php?route=common/home&language=en-gb
+appURL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 
 email=Admin
 password=admin123
