--- a/opencart_cucumber_framework/pom.xml
+++ b/opencart_cucumber_framework/pom.xml
@@ -13,6 +13,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+      <replace-properties>opencart_cucumber_framework/src/test/resources/config.properties</replace-properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -37,10 +38,30 @@
 						<configuration>
 							<systemPropertyVariables>
 								<cucumber.features>${cucumber.features}</cucumber.features>
-								<browser>${browser}</browser>
 							</systemPropertyVariables>
 						</configuration>
 					</plugin>
+					
+					<plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.2.0</version>
+            <executions>
+                <execution>
+                    <id>replace-properties</id>
+                    <goals>
+                        <goal>regex-property</goal>
+                    </goals>
+                    <configuration>
+                        <file>opencart_cucumber_framework/src/test/resources/config.properties</file>
+                        <regex>^browser=.*$</regex>
+                        <value>browser=${browser}</value>
+                        <failIfNoMatch>false</failIfNoMatch>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+					
 				</plugins>
 
 		</pluginManagement>
